--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="month">月</string>
     <string name="second">秒</string>
     <string name="total">总计</string>
+    <string name="city">市</string>
     <string name="province">省</string>
     <string name="region">自治区</string>
     <string name="monday">周一</string>
