change en strings

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -543,40 +543,40 @@
     <string name="failed_to_get_vendor_no_data">没有获取到商家信息, 请手动输入</string>
     <string name="failed_to_get_gps_info">未能定位你的位置，请手动输入商家名或稍后再试</string>
     <string name="failed_to_get_version">获取版本号失败</string>
-    <string name="failed_to_export">导出失败</string>
-    <string name="failed_to_read_image">图片读取失败</string>
-    <string name="failed_to_save_avatar">头像保存失败</string>
-    <string name="failed_to_save_invoice">保存失败</string>
-    <string name="failed_to_save_item">保存失败</string>
-    <string name="failed_to_save_report">报告保存失败</string>
-    <string name="failed_to_download_avatar">下载失败</string>
-    <string name="failed_to_download_invoice">照片下载失败</string>
-    <string name="failed_to_upload_invoice">照片上传失败</string>
-    <string name="failed_to_upload_avatar">头像上传失败</string>
-    <string name="failed_to_create_company">公司创建失败</string>
-    <string name="failed_to_create_item">创建消费失败</string>
-    <string name="failed_to_create_report">创建失败</string>
-    <string name="failed_to_create_category">创建失败</string>
-    <string name="failed_to_create_tag">创建失败</string>
-    <string name="failed_to_create_proxy">创建失败</string>
-    <string name="failed_to_modify_item">修改失败</string>
-    <string name="failed_to_modify_category">修改失败</string>
-    <string name="failed_to_modify_tag">修改失败</string>
-    <string name="failed_to_modify_proxy">修改失败</string>
-    <string name="failed_to_delete_category">删除失败</string>
-    <string name="failed_to_delete_tag">删除失败</string>
-    <string name="failed_to_delete_proxy">删除失败</string>
-    <string name="failed_to_search">网络搜索失败</string>
-    <string name="failed_to_send_feedback">反馈发送失败</string>
-    <string name="failed_to_change_manager">默认上级修改失败</string>
-    <string name="failed_to_send_invite">邀请发送失败</string>
-    <string name="failed_to_send_invite_reply">邀请回复发送失败</string>
-    <string name="failed_to_send_apply_reply">申请回复发送失败</string>
-    <string name="failed_to_send_comment">评论发表失败</string>
-    <string name="failed_to_submit_report">提交报告失败</string>
-    <string name="failed_to_revoke_report">撤回报告失败</string>
-    <string name="failed_to_send_email">邮件发送失败</string>
-    <string name="failed_to_send_message">短信发送失败</string>
+    <string name="failed_to_export">Failed to export</string>
+    <string name="failed_to_read_image">Failed to read image</string>
+    <string name="failed_to_save_avatar">Failed to save avatar</string>
+    <string name="failed_to_save_invoice">Failed to save</string>
+    <string name="failed_to_save_item">Failed to save</string>
+    <string name="failed_to_save_report">Failed to save report</string>
+    <string name="failed_to_download_avatar">Failed to download</string>
+    <string name="failed_to_download_invoice">Failed to download invoice</string>
+    <string name="failed_to_upload_invoice">Failed to upload invoice</string>
+    <string name="failed_to_upload_avatar">Failed to upload avatar</string>
+    <string name="failed_to_create_company">Failed to create company</string>
+    <string name="failed_to_create_item">Failed to create item</string>
+    <string name="failed_to_create_report">Failed to create</string>
+    <string name="failed_to_create_category">Failed to create</string>
+    <string name="failed_to_create_tag">Failed to create</string>
+    <string name="failed_to_create_proxy">Failed to create</string>
+    <string name="failed_to_modify_item">Failed to modify</string>
+    <string name="failed_to_modify_category">Failed to modify</string>
+    <string name="failed_to_modify_tag">Failed to modify</string>
+    <string name="failed_to_modify_proxy">Failed to modify</string>
+    <string name="failed_to_delete_category">Failed to delete</string>
+    <string name="failed_to_delete_tag">Failed to delete</string>
+    <string name="failed_to_delete_proxy">Failed to delete</string>
+    <string name="failed_to_search">Failed to search</string>
+    <string name="failed_to_send_feedback">Failed to send feedback</string>
+    <string name="failed_to_change_manager">Failed to change default manager</string>
+    <string name="failed_to_send_invite">Failed to send invitation</string>
+    <string name="failed_to_send_invite_reply">Failed to send reply of invitation</string>
+    <string name="failed_to_send_apply_reply">Failed to send reply of application</string>
+    <string name="failed_to_send_comment">Failed to comment</string>
+    <string name="failed_to_submit_report">Failed to submit report</string>
+    <string name="failed_to_revoke_report">Failed to revoke report</string>
+    <string name="failed_to_send_email">Failed to send email</string>
+    <string name="failed_to_send_message">Failed to send message</string>
     <string name="failed_to_modify">修改失败</string>
     <string name="failed_to_modify_user_info">用户信息修改失败</string>
     <string name="failed_to_sign_in">登录失败</string>
